  * Convert debian/copyright to machine-readable DEP5 format.
  * Update license and copyright years in debian/copyright wrt. to
    COPYRIGHT file in BASE.txz
  * Include security(7) and securelevel(7) man pages. (Closes: #737717)
    + Only include the man pages from section 3 and 7 in generated
      upstream tar ball which are also shipped in the binary package.

 -- Axel Beckert <abe@debian.org>  Sat, 17 Sep 2016 23:38:41 +0200

freebsd-manpages (10.1~RC1-1) unstable; urgency=medium

  * New upstream release candidate
  * Update watch file to handle release candidates, mangle upstream
    version to replace dash with tilde.

 -- Axel Beckert <abe@debian.org>  Sat, 04 Oct 2014 13:44:16 +0200

freebsd-manpages (10.1~BETA2-1) unstable; urgency=medium

  * New upstream beta release
  * Fix debian/watch to also recognize 10.X and Y.10 releases
  * Switch debian/watch to use HTTP instead of FTP
  * Add get-orig-source-beta to debian/rules and support beta versions in
    debian/watch.
  * Switch from perl's deprecated prename to (file-)rename
    + Update build-dependency from perl to rename.
  * Bump Standards-Version to 3.9.6 (no changes)

 -- Axel Beckert <abe@debian.org>  Wed, 24 Sep 2014 22:02:06 +0200

freebsd-manpages (9.2+1-1) unstable; urgency=low

  * Fix get-orig-source target to use versioned file names for the
    downloaded base.txz file. Avoids reusing the previous release's
    base.txz file.
  * Restrict targets for "dh $@" to not match get-orig-source
  * Use tar option --no-xattrs instead of ignoring tar's exit code due to
    unknown extended header keywords as present in FreeBSD's tar balls.
  * Reupload with correctly generated orig.tar.xz

 -- Axel Beckert <abe@debian.org>  Sun, 20 Oct 2013 00:41:52 +0200

freebsd-manpages (9.2-1) unstable; urgency=low

  * New upstream version.
  * Upload to unstable again.

 -- Axel Beckert <abe@debian.org>  Sat, 19 Oct 2013 23:04:07 +0200

freebsd-manpages (9.1-1) experimental; urgency=low
